antoniora/deploy/yamls/pacman-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: pacman
  name: pacman
spec:
  host: pacman-m2k.apps-crc.testing
  path: /
  port:
    targetPort: port-8080
  to:
    kind: Service
    name: pacman
    weight: 1
status:
  ingress:
    - {}
